2806
Martin: I assume this has something to do with tupling the arguments in the alternative with one argument list, but I couldn't find where this is described in the spec. Also, I think it would be helpful to instantiate the type parameters in the alternatives to better show how each alternative is applicable.
```scala
[log typer] infer method alt constructor A with alternatives List((<param> z: hoho.this.H,<param> h: T)hoho.this.A[T], (<param> y: hoho.this.G,<param> z: T)hoho.this.A[T], (<param> x: T)hoho.this.A[T]), argtpes = List(hoho.this.H, scala.this.Int), pt = ?
/Users/adriaan/git/scala/test/pending/pos/t2660.scala:23: error: ambiguous reference to overloaded definition,
both constructor A in class A of type (<param> z: hoho.this.H,<param> h: T)hoho.this.A[T]
and  constructor A in class A of type (<param> x: T)hoho.this.A[T]
match argument types (hoho.this.H,scala.this.Int)
    new A(new H, 23)
    ^
```
